# android-opencv-opengl-web-rnd-intern

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetector/: Camera2Helper.java  ImageFormatConverter.java  MainActivity.java  NativeBridge.java
app/src/main/java/com/example/edgedetector/gl/: GLRenderer.java  MyGLSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
web/: index.html  viewer.js  viewer.ts
